<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of products -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minHeight="100dp"
              android:orientation="horizontal"
              android:padding="@dimen/activity_margin"
              android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/image_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/image_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:targetApi="jelly_bean"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#000000"
                tools:text="@string/name_of_product" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorAccent"
                tools:text="700" />

            <TextView
                android:id="@+id/currency_sign"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:text="@string/currency_sign" />
        </LinearLayout>


        <TextView
            android:id="@+id/item_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#AEB6BD"
            tools:text="@string/sample_model" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seller_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"
                android:text="Sold by : Cloudtail" />

            <TextView
                android:id="@+id/item_quantity"
                android:layout_marginRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"
                tools:text="@string/sample_quantity" />

            <TextView
                android:id="@+id/stock_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD"
                android:text="@string/unit" />
        </LinearLayout>


    </LinearLayout>

    <ImageButton
        android:id="@+id/item_buy_button"
        android:focusableInTouchMode="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/add_button"
        android:textColor="@android:color/white"
        android:background="@color/white"/>

</LinearLayout>